--- a/Website/package.json
+++ b/Website/package.json
@@ -31,9 +31,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
-    "react-bootstrap-table": "^4.3.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-fa": "^5.0.0",
+    "reactstrap": "^6.3.1"
   }
 }
